Fixed UX issue where menu would overlap on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,6 @@ float: right;
 margin-right: 15px;
 display: block;
 text-align: center;
-padding: 14px;
 text-decoration: none;
 }
 
